continue working added menu ang pages

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,3 +1,27 @@
-<nav class="menu-nav">
-  <app-menu></app-menu>
-</nav>
+<router-outlet></router-outlet>
+<!-- 
+<section class="menu">
+  <h2>Plan</h2>
+  <h3>menu</h3>
+  <ul class="items">
+    <li class="head-item">manifestation</li>
+    <ul>
+      <li>daily</li>
+      <li>1 year</li>
+      <li>5 years</li>
+      <li>more than 10 years</li>
+    </ul>
+    <li class="head-item">affirmation</li>
+    <ul>
+      <li>daily</li>
+      <li>1 year</li>
+      <li>5 years</li>
+      <li>more than 10 years</li>
+    </ul>
+    <li class="head-item">visual board</li>
+    <ul>
+      <li>show</li>
+      <li>create</li>
+    </ul>
+  </ul>
+</section> -->
