--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 @import "./assets/styles/color-scheme";
 @import "./assets/styles/triangle";
 @import "./assets/styles/layout";
+@import "./assets/styles/manifestation";
+@import "./assets/styles/buttons";
 
 html,
 body {
