--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -1,8 +1,13 @@
-.btn-menu {
-  width: 5rem;
-  height: 2rem;
+.btn-menu,
+.btn-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   border-radius: 7px;
   margin-right: 2rem;
+  padding: 0.8rem;
+  text-align: center;
   background-color: rgb(16, 111, 235);
   color: rgb(243, 227, 227);
 
@@ -14,9 +19,30 @@
 
 .menu-nav {
   display: flex;
-  justify-content: right;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 3rem;
   background-color: rgb(0, 60, 255);
+
+  &--item {
+    margin: 0;
+  }
+}
+
+.menu-btn--root {
+  display: inline-block;
+  z-index: 100;
+}
+
+.menu-btn--leaf {
+  margin-left: 1px;
+  display: inline-block;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  // width: 155px;
+  margin-top: 20px;
 }
