--- a/src/app/manifestation/components/manifestation/manifestation.component.html
+++ b/src/app/manifestation/components/manifestation/manifestation.component.html
@@ -1,77 +1,146 @@
 <section class="manifestation">
   <h2>MANIFESTATION PLANNER</h2>
-  <div>
-    <mat-form-field>
-      <mat-label>I want to manifest</mat-label>
-      <input class="input-long" matInput type="text" />
-    </mat-form-field>
-  </div>
-  <div>
-    <mat-form-field>
-      <mat-label>My prayer to the universe</mat-label>
-      <input class="input-long" matInput type="text" />
-    </mat-form-field>
-  </div>
-  <div>
-    <h3>Vizualization</h3>
+  <form
+    class="manifestation-form"
+    [formGroup]="manifestationForm"
+    onsubmit="submit()"
+  >
     <div>
       <mat-form-field>
-        <mat-label>I see</mat-label>
+        <mat-label>I want to manifest</mat-label>
         <input class="input-long" matInput type="text" />
       </mat-form-field>
     </div>
     <div>
       <mat-form-field>
-        <mat-label>I have</mat-label>
+        <mat-label>My prayer to the universe</mat-label>
         <input class="input-long" matInput type="text" />
       </mat-form-field>
     </div>
     <div>
-      <mat-form-field>
-        <mat-label>I feel</mat-label>
-        <input class="input-long" matInput type="text" />
-      </mat-form-field>
-    </div>
-    <h3>LIMITING BELIEFS I NEED GET RID OF:</h3>
-    <button class="btn-icon"><mat-icon>plus_one</mat-icon></button>
-    <ol>
-      <li>
+      <h3>Vizualization</h3>
+      <div>
         <mat-form-field>
-          <mat-label>GET RID OF</mat-label>
+          <mat-label>I see</mat-label>
           <input class="input-long" matInput type="text" />
         </mat-form-field>
-      </li>
-    </ol>
-  </div>
-  <h3>MYDAILY AFFIRMATIONS</h3>
-  <button class="btn-icon"><mat-icon>plus_one</mat-icon></button>
-  <ol>
-    <li>
-      <mat-form-field>
-        <mat-label>AFFIRMATIONS</mat-label>
-        <input class="input-long" matInput type="text" />
-      </mat-form-field>
-    </li>
-  </ol>
+      </div>
+      <div>
+        <mat-form-field>
+          <mat-label>I have</mat-label>
+          <input class="input-long" matInput type="text" />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <mat-label>I feel</mat-label>
+          <input class="input-long" matInput type="text" />
+        </mat-form-field>
+      </div>
+    </div>
 
-  <div class="action-todo">
-    <div class="action-todo__action">
-      <ol>
-        <li>
-          <mat-form-field>
-            <mat-label>Action</mat-label>
-            <input class="input-long" matInput type="text" />
-          </mat-form-field>
-        </li>
-      </ol>
+    <div formArrayName="getRidOf">
+      <h3>LIMITING BELIEFS I NEED GET RID OF:</h3>
+      <button
+        type="button"
+        mat-button
+        class="btn-icon"
+        (click)="addFieldGetRidOf()"
+      >
+        <mat-icon>plus_one</mat-icon>
+      </button>
+
+      <div *ngFor="let field of getGetRidOf().controls; index as idx">
+        <div [formGroupName]="idx">
+          <ol>
+            <li>
+              <mat-form-field>
+                <mat-label>GET RID OF</mat-label>
+                <input class="input-long" matInput type="text" />
+              </mat-form-field>
+            </li>
+          </ol>
+        </div>
+        <button
+          type="button"
+          mat-button
+          color="warn"
+          class="btn-icon"
+          [disabled]="canDeleteGetRidOf"
+          (click)="deleteFieldGetRidOf(idx)"
+        >
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </div>
     </div>
-    <div class="action-todo__todo">
-      <mat-checkbox>
-        <mat-form-field>
-          <mat-label>To-do</mat-label>
-          <input class="input-long" matInput type="text" />
-        </mat-form-field>
-      </mat-checkbox>
+    <div formArrayName="dailyAffirm">
+      <h3>MYDAILY AFFIRMATIONS</h3>
+      <button
+        type="button"
+        mat-button
+        class="btn-icon"
+        (click)="addFieldDailyAffirm()"
+      >
+        <mat-icon>plus_one</mat-icon>
+      </button>
+      <div *ngFor="let affir of getDailyAffirm().controls; index as idx">
+        <div [formGroupName]="idx">
+          <ol>
+            <li>
+              <mat-form-field>
+                <mat-label>AFFIRMATIONS</mat-label>
+                <input
+                  class="input-long"
+                  matInput
+                  type="text"
+                  formControlName="affirmation"
+                />
+              </mat-form-field>
+            </li>
+          </ol>
+
+          <div class="action-todo">
+            <div class="action-todo__action">
+              <ol>
+                <li>
+                  <mat-form-field>
+                    <mat-label>Action</mat-label>
+                    <input
+                      class="input-long"
+                      matInput
+                      type="text"
+                      formControlName="action"
+                    />
+                  </mat-form-field>
+                </li>
+              </ol>
+            </div>
+            <div class="action-todo__todo">
+              <mat-checkbox>
+                <mat-form-field>
+                  <mat-label>To-do</mat-label>
+                  <input
+                    class="input-long"
+                    matInput
+                    type="text"
+                    formControlName="todo"
+                  />
+                </mat-form-field>
+              </mat-checkbox>
+            </div>
+          </div>
+        </div>
+        <button
+          type="button"
+          mat-button
+          color="warn"
+          class="btn-icon"
+          [disabled]="canDeleteDailyAffirm"
+          (click)="deleteFieldDailyAffirm(idx)"
+        >
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </div>
     </div>
-  </div>
+  </form>
 </section>
