--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "./assets/styles/color-scheme";
-@import "./assets/styles/triangle";
-@import "./assets/styles/layout";
-@import "./assets/styles/manifestation";
-@import "./assets/styles/buttons";
+@import "./assets/styles/header";
+@import "./assets/styles/visual";
 
-html,
-body {
-  height: 100%;
-}
+*,
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  padding: 0;
+  box-sizing: border-box;
 }
